feat: add hands visibility toggle

--- a/front-end/src/styles/blocks/customization.scss
+++ b/front-end/src/styles/blocks/customization.scss
@@ -249,7 +249,6 @@
 }
 
 .options-skin {
-  height: 100%;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -344,4 +343,39 @@
   &.current-char {
     background-color: $c-accent;
   }
+}
+
+.hands-option {
+  width: 6.2rem;
+  height: 3.2rem;
+  position: relative;
+  padding-left: 3rem;
+  transition: 0s;
+
+  &.hands-visible {
+    background: $bg-icon-hand-yes no-repeat right;
+  }
+  &.hands-hidden {
+    background: $bg-icon-hand-no  no-repeat right;
+  }
+
+  &::before {
+    content: '';
+    background: $bg-icon-hand no-repeat center / contain;
+    display: block;
+    position: absolute;
+    width: 2.4rem;
+    height: 2.4rem;
+    top: 0.4rem;
+    left: 0;
+  }
+}
+
+.options-keyboard {
+  display: flex;
+  height: 100%;
+  row-gap: 1.5rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
