--- a/front-end/src/games/typing-adventure/game-styles/modal.scss
+++ b/front-end/src/games/typing-adventure/game-styles/modal.scss
@@ -36,6 +36,25 @@
   box-shadow: $c-adventure-modal-shadow;
 }
 
+.game-info-modal-window::-webkit-scrollbar,
+.start-modal-window::-webkit-scrollbar {
+  width: 10px;
+}
+
+.game-info-modal-window::-webkit-scrollbar-track,
+.start-modal-window::-webkit-scrollbar-track {
+  background-color: #130432;
+  border-radius: 5rem;
+}
+
+.game-info-modal-window::-webkit-scrollbar-thumb,
+.start-modal-window::-webkit-scrollbar-thumb {
+  border-radius: 5rem;
+  border: 0.2rem solid transparent;
+  background-clip: content-box;
+  background-color: #9271EE;
+}
+
 .start-modal-window {
   @extend .welcome-modal-window;
   width: 50rem;
