refactor: change px to rem & imports order

--- a/front-end/src/games/typing-adventure/game-styles/modal.scss
+++ b/front-end/src/games/typing-adventure/game-styles/modal.scss
@@ -38,7 +38,7 @@
 
 .game-info-modal-window::-webkit-scrollbar,
 .start-modal-window::-webkit-scrollbar {
-  width: 10px;
+  width: 1rem;
 }
 
 .game-info-modal-window::-webkit-scrollbar-track,
