--- a/front-end/src/games/typing-hero/styles/modals.scss
+++ b/front-end/src/games/typing-hero/styles/modals.scss
@@ -37,7 +37,7 @@
 }
 
 .hero-start-menu-modal::-webkit-scrollbar {
-  width: 10px;
+  width: 1rem;
 }
 
 .hero-start-menu-modal::-webkit-scrollbar-track {
