--- a/front-end/src/games/typing-adventure/game-styles/modal.scss
+++ b/front-end/src/games/typing-adventure/game-styles/modal.scss
@@ -25,8 +25,8 @@
   row-gap: 2rem;
   position: relative;
   top: calc(50% - 14.5rem);
-  left: calc(50% - 25rem);
-  width: 50rem;
+  left: calc(50% - 28.5rem);
+  width: 57rem;
   height: 29rem;
   padding: 2rem;
   background-color: $c-adventure-modal-bg;
@@ -34,6 +34,14 @@
   text-align: center;
   color: $c-adventure-text-content;
   box-shadow: $c-adventure-modal-shadow;
+
+  @include mobile {
+    @include font-main-small;
+    padding: 1rem;
+    row-gap: 1rem;
+    width: 30rem;
+    left: calc(50% - 15rem);
+  }
 }
 
 .game-info-modal-window::-webkit-scrollbar,
@@ -69,15 +77,28 @@
   flex-direction: column;
   justify-content: flex-start;
   overflow-y: scroll;
+
+  @include mobile {
+    width: 30rem;
+    left: calc(50% - 15rem);
+  }
 }
 
 .start-modal-img {
   width: 40rem;
+
+  @include mobile {
+    width: 25rem;
+  }
 }
 
 .welcome-modal-text {
   @include font-title-mobile;
   color: $c-adventure-title-content;
+
+  @include mobile {
+    @include font-subtitle-mobile;
+  }
 }
 
 .game-info-modal-window {
@@ -85,6 +106,11 @@
   height: 50rem;
   top: calc(50% - 25rem);
   left: calc(50% - 24rem);
+
+  @include mobile {
+    width: 30rem;
+    left: calc(50% - 15rem);
+  }
 }
 
 .reset-state-modal-window {
@@ -118,7 +144,7 @@
 
   @include mobile {
     @include font-main-small;
-    width: 10rem;
+    min-width: 10rem;
     height: 4rem;
   }
 }
@@ -131,6 +157,10 @@
 .welcome-modal-buttons {
   display: flex;
   gap: 5.5rem;
+
+  @include mobile {
+    gap: 1.5rem;
+  }
 }
 
 .field-modal-window {
