--- a/front-end/src/games/typing-hero/styles/lvl-field.scss
+++ b/front-end/src/games/typing-hero/styles/lvl-field.scss
@@ -77,6 +77,7 @@
   border-style: solid;
   border-color: $c-accent;
   display: flex;
+  justify-content: center;
   @include tablet-stats {
     margin: 3rem auto 0 auto;
     width: 30rem;
