--- a/front-end/src/games/typing-adventure/game-styles/game-field.scss
+++ b/front-end/src/games/typing-adventure/game-styles/game-field.scss
@@ -135,7 +135,7 @@
 
   @media (max-width: $desktop-adventure) {
     width: 30rem;
-    height: 25rem;
+    height: 27rem;
   }
 
   @include desktop-small {
@@ -352,14 +352,62 @@
 }
 
 .hero-field-panel {
+  overflow-x: auto;
   position: relative;
-  max-width: 100rem;
   margin: 0 auto;
-  padding: 0 5rem;
+  padding: 0.5rem 2.5rem;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   flex-wrap: wrap;
+
+  @include mobile {
+    padding: 0.5rem 0.5rem;
+  }
+
+  & .action-spell-wrapper {
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    background-color: $c-adventure-action-spell-bg;
+    border-radius: $small-border-radius;
+    padding: 1rem 1rem;
+    &.beast-action {
+      padding: 0;
+    }
+  
+    @include mobile {
+      height: 3rem;
+    }
+  }
+  
+  & .action-spell-image {
+    width: 2rem;
+    height: 2rem;
+  }
+  
+  & .action-spell-name {
+    @include font-main;
+    font-weight: $fw-bold;
+  }
+}
+
+.hero-field-panel::-webkit-scrollbar {
+  width: 1rem;
+}
+
+.hero-field-panel::-webkit-scrollbar-track {
+  background-color: $c-adventure-modal-bg;
+  border-radius: 5rem;
+}
+
+.hero-field-panel::-webkit-scrollbar-thumb {
+  border-radius: 5rem;
+  border: 0.2rem solid transparent;
+  background-clip: content-box;
+  background-color: $c-adventure-title-content;
 }
