--- a/front-end/src/games/typing-adventure/game-styles/modal.scss
+++ b/front-end/src/games/typing-adventure/game-styles/modal.scss
@@ -18,6 +18,7 @@
 .welcome-modal-window,
 .game-info-modal-window {
   @include font-main;
+  z-index: 15;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -65,6 +66,7 @@
 
 .start-modal-window {
   @extend .welcome-modal-window;
+  z-index: 15;
   width: 50rem;
   height: 50rem;
   top: calc(50% - 25rem);
@@ -73,6 +75,7 @@
 
 .start-modal-window,
 .game-info-modal-window {
+  z-index: 15;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -102,6 +105,7 @@
 }
 
 .game-info-modal-window {
+  z-index: 15;
   width: 48rem;
   height: 50rem;
   top: calc(50% - 25rem);
@@ -115,6 +119,7 @@
 
 .reset-state-modal-window {
   @extend .welcome-modal-window;
+  z-index: 15;
   width: 30rem;
   height: 15rem;
   top: calc(50% - 7.5rem);
@@ -165,10 +170,11 @@
 
 .field-modal-window {
   @extend .welcome-modal-window;
+  z-index: 15;
   position: relative;
   width: 30rem;
-  height: 15rem;
-  top: calc(50% - 7.5rem);
+  height: 20rem;
+  top: calc(50% - 10rem);
   left: calc(50% - 15rem);
   padding: 2rem;
   border-radius: $big-border-radius;
@@ -180,7 +186,7 @@
 }
 
 .field-modal-content-info {
-  @include font-subtitle;
+  @include font-main;
   color: $c-adventure-text-content;
 }
 
