--- a/front-end/src/games/typing-hero/styles/game-menu.scss
+++ b/front-end/src/games/typing-hero/styles/game-menu.scss
@@ -89,7 +89,7 @@
   top: 0;
   left: -1.5rem;
   width: 0.2rem;
-  height: 3.3rem;
+  height: 100%;
   background-color: $c-accent;
   border-radius: $small-border-radius;
 
