--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -302,7 +302,7 @@ $c-adventure-action-spell-bg: #180734;
 $c-adventure-hp-result: #911059;
 $c-adventure-spells-water: #4C83DB;
 $c-adventure-spells-fire: #E24374;
-$c-adventure-spells-wind: #535898;
+$c-adventure-spells-wind: #8186C3;
 $c-adventure-spells-light: #F99A16;
 $c-adventure-spells-thunder: #BDBDD8;
 $c-adventure-spells-elemental: #A069E7;
