feat: add a spinner while fetching lessons

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -5,6 +5,7 @@
 @import './styles/common/themes.scss';
 @import './styles/common/reset.scss';
 @import './styles/common/default.scss';
+@import './styles/common/spinner.scss';
 
 // Layout
 @import './styles/blocks/header.scss';
