--- a/front-end/src/styles/common/spinner.scss
+++ b/front-end/src/styles/common/spinner.scss
@@ -17,13 +17,21 @@
   animation: spin 1.5s infinite linear;
 }
 
+.spinner.spinner-in-wrapper {
+  margin: 0 auto;
+}
+
 .loader-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 5rem;
-  height: calc(100% - 10rem);
+  height: 100%;
+}
+
+.loader-wrapper.game-loader {
+  height: 100vh;
 }
 
 @keyframes spin {
