feat: add spinners in authentication modals

--- a/front-end/src/styles/common/spinner.scss
+++ b/front-end/src/styles/common/spinner.scss
@@ -21,6 +21,10 @@
   margin: 0 auto;
 }
 
+.spinner.auth-spinner {
+  margin: 0 auto 4rem;
+}
+
 .loader-wrapper {
   display: flex;
   flex-direction: column;
